objects/Help_Short_URLs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Depending on the values of what country user is in and the language his browser is set to for the particular url &apos;Name&apos; user will be redirected to the url specified in &apos;Long URL&apos;</description>
    <fields>
        <fullName>Country_code__c</fullName>
        <label>Country code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_code__c</fullName>
        <label>Language code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_URL__c</fullName>
        <label>Long URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_URL_Name__c</fullName>
        <label>Short URL Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Help Short URLs</label>
</CustomObject>